infra/k8s/musics-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: musics-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: musics
  template:
    metadata:
      labels:
        app: musics
    spec:
      containers:
        - name: musics
          image: chesterheng/musics
---
apiVersion: v1
kind: Service
metadata:
  name: musics-srv
spec:
  selector:
    app: musics
  ports:
    - name: musics
      protocol: TCP
      port: 3000
      targetPort: 3000
