infra/k8s/oemer-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oemer-depl
  namespace: ingress-nginx

spec:
  replicas: 1
  selector:
    matchLabels:
      app: oemer
  template:
    metadata:
      labels:
        app: oemer
    spec:
      containers:
        - name: oemer
          image: heysirius/oemer
---
apiVersion: v1
kind: Service
metadata:
  name: oemer-srv
  namespace: ingress-nginx

spec:
  selector:
    app: oemer
  ports:
    - name: oemer
      protocol: TCP
      port: 3000
      targetPort: 3000
