infra/k8s/oemer-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oemer-mongo-depl
  namespace: ingress-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oemer-mongo
  template:
    metadata:
      labels:
        app: oemer-mongo
    spec:
      containers:
        - name: oemer-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: oemer-mongo-srv
  namespace: ingress-nginx

spec:
  selector:
    app: oemer-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
